@@ -61,8 +61,12 @@
     <string name="VCategory.PublishedArticles">Veröffentlichte Artikel</string>
     <string name="VCategory.StarredArticles">Favorisierte Artikel</string>
     <string name="Feed.UncategorizedFeeds">Unkategorisierte Feeds</string>
+    
     <string name="CategoryActivity.NoServer">Kein Server angegeben.</string>
     <string name="CategoryActivity.Donate">Möchten Sie spenden?</string>
+    <string name="CategoryActivity.MarkRead">Als \"gelesen\" markieren</string>
+    
+    <string name="FeedListActivity.MarkRead.MarkRead">Als \"gelesen\" markieren</string>
     
     <string name="FeedHeadlineListActivity.MarkAllRead">Alle als gelesen markieren</string>
     <string name="FeedHeadlineListActivity.MarkAllUnread">Alle als ungelesen markieren</string>
