@@ -27,7 +27,6 @@ import org.ttrssreader.gui.IRefreshEndListener;
 import org.ttrssreader.gui.IUpdateEndListener;
 import org.ttrssreader.model.Refresher;
 import org.ttrssreader.model.Updater;
-import org.ttrssreader.model.article.ArticleItem;
 import org.ttrssreader.model.feed.FeedItem;
 import org.ttrssreader.model.feed.FeedListAdapter;
 import org.ttrssreader.model.updaters.ReadStateUpdater;
@@ -35,16 +34,16 @@ import org.ttrssreader.utils.Utils;
 import android.app.ListActivity;
 import android.content.Intent;
 import android.os.AsyncTask;
+import android.os.AsyncTask.Status;
 import android.os.Bundle;
 import android.os.Handler;
-import android.os.AsyncTask.Status;
 import android.view.ContextMenu;
 import android.view.Menu;
 import android.view.MenuItem;
 import android.view.View;
 import android.view.Window;
-import android.widget.ListView;
 import android.widget.AdapterView.AdapterContextMenuInfo;
+import android.widget.ListView;
 
 public class FeedListActivity extends ListActivity implements IRefreshEndListener, IUpdateEndListener {
     
@@ -54,7 +53,6 @@ public class FeedListActivity extends ListActivity implements IRefreshEndListene
     
     private static final int MARK_GROUP = 42;
     private static final int MARK_READ = MARK_GROUP + 1;
-    private static final int MARK_UNREAD = MARK_GROUP + 2;
     
     public static final String CATEGORY_ID = "CATEGORY_ID";
     public static final String CATEGORY_TITLE = "CATEGORY_TITLE";
@@ -178,8 +176,7 @@ public class FeedListActivity extends ListActivity implements IRefreshEndListene
     public void onCreateContextMenu(ContextMenu menu, View v, ContextMenu.ContextMenuInfo menuInfo) {
         super.onCreateContextMenu(menu, v, menuInfo);
         
-        menu.add(MARK_GROUP, MARK_READ, Menu.NONE, R.string.FeedHeadlineListActivity_MarkRead);
-        menu.add(MARK_GROUP, MARK_UNREAD, Menu.NONE, R.string.FeedHeadlineListActivity_MarkUnread);
+        menu.add(MARK_GROUP, MARK_READ, Menu.NONE, R.string.FeedListActivity_MarkRead);
     }
     
     @Override
@@ -191,14 +188,9 @@ public class FeedListActivity extends ListActivity implements IRefreshEndListene
             return false;
         }
         
-        Set<ArticleItem> articles = Data.getInstance().getArticles(f.getId());
-        
         switch (item.getItemId()) {
             case MARK_READ:
-                new Updater(this, new ReadStateUpdater(articles, f.getId(), 0)).execute();
-                return true;
-            case MARK_UNREAD:
-                new Updater(this, new ReadStateUpdater(articles, f.getId(), 1)).execute();
+                new Updater(this, new ReadStateUpdater(f.getId(), 42)).execute();
                 return true;
         }
         return false;
@@ -243,7 +235,7 @@ public class FeedListActivity extends ListActivity implements IRefreshEndListene
                 doRefresh();
                 return true;
             case MENU_MARK_ALL_READ:
-                new Updater(this, new ReadStateUpdater(mCategoryId, 0)).execute();
+                new Updater(this, new ReadStateUpdater(mCategoryId)).execute();
                 return true;
         }
         
